--- a/WebContent/craps.css
+++ b/WebContent/craps.css
@@ -34,3 +34,17 @@
 #die2 {
 	background-position: -42px -42px;
 }
+
+#wagerentry {
+	display: none;
+	overflow: hidden;
+	position: relative;
+	top: 120px;
+	left: 100px;
+	width: 200px;
+	border: ridge gray;
+	background-color: DarkGray;
+	opacity: 0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
+}
+
